<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenubackground"
    tools:context="com.example.group_14_project.FlickrEdit">


    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/load_your_image_set" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layout123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addimg"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:text="@string/add_image"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/numOfImgLabel"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/number_of_images"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/orderNumberLabel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="66dp"
        android:text="@string/required"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background" />
    <TextView
        android:id="@+id/orderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background" />


    <EditText
        android:id="@+id/removeimgnumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="106dp"
        android:text="@string/remove_image_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/remove"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/remove" />

    <Button
        android:id="@+id/applyImageSet"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110sp"
        android:layout_marginBottom="60dp"
        android:text="@string/apply_image_set"
        android:textSize="10sp" />

    <Button
        android:id="@+id/saveImageSet"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="60dp"
        android:text="@string/save_image_set"
        android:textSize="10sp" />

    <Button
        android:id="@+id/viewImageSets"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="10dp"
        android:text="@string/view_saved_image_sets"
        android:textSize="10sp" />

    <Button
        android:id="@+id/addFlickrImg"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5sp"
        android:layout_marginTop="50sp"
        android:text="@string/add_flickr_image"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/setSaveNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="170dp"
        android:text="@string/set_name"
        android:textColor="@color/silver"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/savedSetNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="120dp"
        android:text="default"
        android:textColor="@color/silver"
        android:textSize="20sp" />

</RelativeLayout>