<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@drawable/mainmenubackground"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="33dp"
        android:text="@string/main_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playbtn"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/mainmenubutton"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionbtn"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mainmenubutton"
        android:text="@string/option"
        app:layout_constraintEnd_toEndOf="@+id/playbtn"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/playbtn"
        app:layout_constraintTop_toBottomOf="@+id/playbtn" />


    <Button
        android:id="@+id/rulesbtn"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mainmenubutton"
        android:text="@string/rules"
        app:layout_constraintEnd_toEndOf="@+id/optionbtn"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/optionbtn"
        app:layout_constraintTop_toBottomOf="@+id/optionbtn" />

    <Button
        android:id="@+id/ref"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mainmenubutton"
        android:text="@string/references"
        app:layout_constraintEnd_toEndOf="@+id/rulesbtn"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="@+id/rulesbtn"
        app:layout_constraintTop_toBottomOf="@+id/rulesbtn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="457dp"
        android:layout_height="181dp"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="114dp"
        android:contentDescription="@string/spot_it_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rulesbtn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/spotit_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>