<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenubackground"
    tools:context=".SetImages">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="0dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="140dp"
            android:buttonTint="@color/silver"
            android:textStyle="bold"
            android:text="@string/animals"
            android:textColor="@color/silver" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:buttonTint="@color/silver"
            android:textStyle="bold"
            android:text="@string/fruits_and_veggies"
            android:textColor="@color/silver" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:buttonTint="@color/silver"
            android:textStyle="bold"
            android:text="@string/flickr_set"
            android:textColor="@color/silver" />

        <TextView
            android:id="@+id/themeSelectionLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:text="@string/picture_theme"
            android:textColor="@color/silver"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />
    </RadioGroup>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="350dp"
        android:layout_height="300sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200sp"
        app:srcCompat="@drawable/animalset" />

    <Button
        android:id="@+id/setImageButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="60dp"
        android:text="@string/apply_image_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/view_high_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/themeSelectionLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:text="@string/picture_theme"
        android:textColor="@color/silver"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/resetHighScoresButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/reset_high_scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/highScoresButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <Button
        android:id="@+id/createImageSetButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="9dp"
        android:text="@string/create_image_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/highScoresButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <Switch
        android:id="@+id/wordOptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginBottom="115sp"
        android:textStyle="bold"
        android:text="@string/enable_words"
        android:textColor="@color/silver" />

    <TextView
        android:id="@+id/orderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20sp"
        android:layout_marginBottom="210dp"
        android:textStyle="bold"
        android:text="@string/order"
        android:textColor="@color/silver" />

    <TextView
        android:id="@+id/drawPileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125sp"
        android:layout_marginBottom="210dp"
        android:textStyle="bold"
        android:text="@string/draw_pile"
        android:textColor="@color/silver" />

    <Spinner
        android:id="@+id/orderSelectionSpinner"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="150sp"
        android:background="#EDE4E4"
        android:backgroundTint="#F6F4F4" />

    <Spinner
        android:id="@+id/drawpileSelectionSpinner"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="400sp"
        android:layout_marginBottom="150sp"
        android:background="#F1ECEC"
        android:backgroundTint="#F6F4F4" />

</RelativeLayout>